edit user schema

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>User CRM</title>
+	<title>Kitchen Counter</title>
 
 	<!-- FOR ANGULAR ROUTING -->
 	<base href="/">
@@ -38,8 +38,8 @@
 	<div class="navbar navbar-inverse" ng-if="main.loggedIn">
 	<div class="container">
 		<div class="navbar-header">
-			<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-fire text-danger"></span> User CRM</a>
-		</div>	
+			<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-fire text-danger"></span> Kitchen Counter</a>
+		</div>
 		<ul class="nav navbar-nav">
 			<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
 		</ul>
