--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -35,7 +35,7 @@
 
 <!-- NAVBAR -->
 <header>
-	<div class="navbar navbar-inverse" ng-if="main.loggedIn">
+	<div class="navbar" ng-if="main.loggedIn">
 	<div class="container">
 		<div class="navbar-header">
 			<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-fire text-danger"></span> Kitchen Counter</a>
@@ -45,7 +45,7 @@
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-if="!main.loggedIn"><a href="/login">Login</a></li>
-			<li ng-if="main.loggedIn" class="navbar-text">Hello {{ main.user.username }}!</li>
+			<li ng-if="main.loggedIn" class="navbar-text">Hello {{ main.user.name }}!</li>
 			<li ng-if="main.loggedIn"><a href="#" ng-click="main.doLogout()">Logout</a></li>
 		</ul>
 	</div>
