--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,13 +1,13 @@
 <div class="jumbotron text-center">
-	<h1>Welcome to the User CRM!</h1>
+	<h1>Welcome to Kitchen Counter!</h1>
 
 	<div ng-if="!main.loggedIn">
-		<p>Login to see manage your users.</p>
+		<p>Login to manage your ingredients and recipes.</p>
 		<a href="/login" class="btn btn-primary">Login</a>
 	</div>
 
 	<div ng-if="main.loggedIn">
-		<p>Manage your users.</p>
+		<p>Manage your ingredients and recipes</p>
 		<a href="/users" class="btn btn-primary">View Users</a>
 	</div>
 </div>
