--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -4,6 +4,10 @@
 	<div ng-if="!main.loggedIn">
 		<p>Login to manage your ingredients and recipes.</p>
 		<a href="/login" class="btn btn-primary">Login</a>
+		<a href="/users/create" class="btn btn-default">
+			<span class="glyphicon glyphicon-plus"></span>
+			New User
+		</a>
 	</div>
 
 	<div ng-if="main.loggedIn">
