--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -6,8 +6,8 @@
 		<form ng-submit="login.doLogin()">
 
 			<div class="form-group">
-				<label>Username</label>
-				<input type="text" class="form-control" ng-model="login.loginData.username">
+				<label>email</label>
+				<input type="text" class="form-control" ng-model="login.loginData.email">
 			</div>
 
 			<div class="form-group">
