--- a/public/app/views/pages/users/single.html
+++ b/public/app/views/pages/users/single.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-sm-2 control-label">email</label>
+		<label class="col-sm-2 control-label">Email</label>
 		<div class="col-sm-6">
 			<input type="text" class="form-control" ng-model="user.userData.email">
 		</div>
