create user without token working

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -38,7 +38,7 @@
 	<div class="navbar" ng-if="main.loggedIn">
 	<div class="container">
 		<div class="navbar-header">
-			<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-fire text-danger"></span> Kitchen Counter</a>
+			<a href="/" class="navbar-brand"><span class="glyphicon text-danger"></span> Kitchen Counter</a>
 		</div>
 		<ul class="nav navbar-nav">
 			<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
