--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -13,7 +13,7 @@
 
 	<a href="/users/create" class="btn btn-default">
 		<span class="glyphicon glyphicon-plus"></span>
-		New User
+		Sign Up
 	</a>
-	
+
 </div>
