--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -25,6 +25,12 @@
 			</button>
 
 		</form>
+
+		<a href="/users/create" class="btn btn-default">
+			<span class="glyphicon glyphicon-plus"></span>
+			Sign Up
+		</a>
+
 	</div>
 
 </div>
