--- a/public/app/views/pages/users/add_ing.html
+++ b/public/app/views/pages/users/add_ing.html
@@ -8,14 +8,35 @@
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Name</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control" ng-model="user.userData.name">
+			<input type="text" class="form-control">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Quantity</label>
+		<div class="col-sm-6">
+			<input type="number" class="form-control">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Unit</label>
+		<div class="col-sm-6">
+			<input type="text" class="form-control">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Expiration Date</label>
+		<div class="col-sm-6">
+			<input type="text" class="form-control">
 		</div>
 	</div>
 
 	<div class="form-group">
 	<div class="col-sm-offset-2 col-sm-6">
 		<!-- <button type="submit" class="btn btn-success btn-lg btn-block" ng-if="user.type == 'create'">Create User</button> -->
-		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="user.type == 'edit'">Add Ingredient</button>
+		<button type="submit" class="btn btn-success btn-lg btn-block">Add Ingredient</button>
 	</div>
 	</div>
 
