--- a/public/app/views/pages/users/add_ing.html
+++ b/public/app/views/pages/users/add_ing.html
@@ -3,33 +3,33 @@
 	<h1 ng-if="user.type == 'edit'">Add Ingredient to {{ user.userData.name }}</h1>
 </div>
 
-<form class="form-horizontal" ng-submit="user.saveUser()">
+<form class="form-horizontal" ng-submit="user.addIng()">
 
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Name</label>
+		<label class="col-sm-2 control-label">Ingredient name</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control">
+			<input type="text" class="form-control" ng-model="user.ingredient.name">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Quantity</label>
 		<div class="col-sm-6">
-			<input type="number" class="form-control">
+			<input type="number" class="form-control" ng-model="user.ingredient.qty">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Unit</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control">
+			<input type="text" class="form-control" ng-model="user.ingredient.unit">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Expiration Date</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control">
+			<input type="date" class="form-control" ng-model="user.ingredient.date">
 		</div>
 	</div>
 
