ingredient form working

--- a/public/app/views/pages/users/show.html
+++ b/public/app/views/pages/users/show.html
@@ -8,7 +8,7 @@
     <h1>Individual profile</h1>
     <h3>{{ user.userData.name }}</h3>
     <h3>{{ user.userData.email }}</h3>
-    <div>Ingredients: {{ user.userData.ingredient }}</div>
+    <div>Ingredients: {{ user.userData.ingredients }}</div>
     <div>Recipes: {{ user.userData.groceryList }}</div>
 
     <h3><a href="/users/{{ user.userData._id}}/edit">Edit current user page</a></h3>
