--- a/public/app/views/pages/users/add_ing.html
+++ b/public/app/views/pages/users/add_ing.html
@@ -29,7 +29,7 @@
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Expiration Date</label>
 		<div class="col-sm-6">
-			<input type="date" class="form-control" ng-model="user.ingredient.date">
+			<input type="date" class="form-control" ng-model="user.ingredient.expiry">
 		</div>
 	</div>
 
