--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,5 @@
 html,body {
-    background: url('../images/ingredients_bg_1.jpg') no-repeat center center fixed;
+    /*background: url('../images/ingredients_bg_1.jpg') no-repeat center center fixed;*/
     /*background: url('../images/ingredients_bg_2.jpg') no-repeat center center fixed;*/
     -webkit-background-size: cover; /* For WebKit*/
     -moz-background-size: cover;    /* Mozilla*/
