recipe show working

--- a/public/app/views/pages/users/show.html
+++ b/public/app/views/pages/users/show.html
@@ -14,10 +14,10 @@
 
       <table style="width:100%">
         <tr>
-          <td>Name</td>
-          <td>Quantity</td>
-          <td>Unit</td>
-          <td>Expiration Date</td>
+          <th>Name</th>
+          <th>Quantity</th>
+          <th>Unit</th>
+          <th>Expiration Date</th>
         </tr>
         <tr ng-repeat="ingredient in user.userData.ingredients">
           <td>{{ ingredient.name }}</td>
