show all and single recipes working

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -44,6 +44,7 @@
 		</div>
 		<ul class="nav navbar-nav">
 			<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
+			<li><a href="/recipes"><span class="glyphicon glyphicon-heart"></span> Recipes</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-if="!main.loggedIn"><a href="/login">Login</a></li>
