--- a/public/app/views/pages/recipes/all.html
+++ b/public/app/views/pages/recipes/all.html
@@ -36,7 +36,7 @@
 			<td>{{ item.user_id }}</td>
 			<td class="col-sm-2">
 				<a ng-href="/recipes/{{ item._id }}" class="btn btn-danger">Show</a>
-				<a href="#" ng-click="recipe.deleteUser(item._id)" class="btn btn-primary">Delete</a>
+				<!-- <a href="#" ng-click="recipe.deleteUser(item._id)" class="btn btn-primary">Delete</a> -->
 			</td>
 		</tr>
 	</tbody>
