--- a/public/app/views/pages/recipes/show.html
+++ b/public/app/views/pages/recipes/show.html
@@ -5,33 +5,26 @@
     <title></title>
   </head>
   <body>
-    <h1>Recipe profile</h1>
-    <h3>{{ recipe.recipes.title }}</h3>
+    <h1>{{ recipe.recipeData.title }}</h1>
     <div>
+
+      <img src="{{ recipe.recipeData.imageUrl }}" alt="" />
+
       <h4>Recipe instructions:</h4>
 
-      <table style="width:100%">
-        <tr>
-          <th>_id</th>
-          <th>Title</th>
-          <th>Image URL</th>
-          <th>Ingredients</th>
-          <th>Prep Time</th>
-          <th>Cook Time</th>
-          <th>Directions</th>
-          <th>User ID</th>
-        </tr>
-        <tr ng-repeat="item in recipe.recipes">
-          <td>{{ item._id }}</td>
-          <td>{{ item.title }}</td>
-          <td>{{ item.imageUrl }}</td>
-          <td>{{ item.ingredients }}</td>
-          <td>{{ item.prep_time }}</td>
-          <td>{{ item.cook_time }}</td>
-          <td>{{ item.directions }}</td>
-          <td>{{ item.recipe_id }}</td>
-        </tr>
-      </table>
+      <div><strong>_id:</strong> {{ recipe.recipeData._id }}</div>
+      <div><strong>Ingredients:</strong> {{ recipe.recipeData.ingredients }}</div>
+      <div><strong>Prep Time:</strong> {{ recipe.recipeData.prep_time }}</div>
+      <div><strong>Cook Time:</strong> {{ recipe.recipeData.cook_time }}</div>
+      <div><strong>Directions:</strong> {{ recipe.recipeData.directions }}</div>
+      <div><strong>User ID:</strong> {{ recipe.recipeData.user_id }}</div>
+
+      <div>
+        <strong>Ingredients:</strong>
+        <ul>
+          <li ng-repeat="item in recipe.recipeData.ingredients">{{ item.name }}</li>
+        </ul>
+      </div>
 
     <!-- <h4><a href="/recipes/{{ recipe.recipeData._id }}/add_ing">Add Recipe</a></h4> -->
     </div>
