--- a/public/app/views/pages/users/show.html
+++ b/public/app/views/pages/users/show.html
@@ -5,8 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Individual profile</h1>
-    <h3>{{ user.userData.name }}</h3>
+    <h1>Welcome, {{ user.userData.name }}</h1>
     <h3>{{ user.userData.email }}</h3>
     <h4><a href="/users/{{ user.userData._id }}/edit">Edit current user page</a></h4>
     <div>
@@ -27,9 +26,9 @@
         </tr>
       </table>
 
-    <h4><a href="/users/{{ user.userData._id }}/add_ing">Add ingredient</a></h4>
+    <h5></span><a href="/users/{{ user.userData._id }}/add_ing"><span class="glyphicon glyphicon-plus">Ingredient</a></h5>
     </div>
-    <div>Recipes: {{ user.userData.groceryList }}</div>
+    <div>Grocery List: {{ user.userData.groceryList }}</div>
 
   </body>
 </html>
