style user and recipe pages

--- a/public/app/views/pages/users/all.html
+++ b/public/app/views/pages/users/all.html
@@ -10,7 +10,7 @@
 	<p>Loading Users...</p>
 </div>
 
-<table class="table table-bordered table-striped" ng-show="user.users">
+<table class="table table-bordered soft-bg" ng-show="user.users">
 	<thead>
 		<tr>
 			<th>_id</th>
