--- a/public/app/views/pages/recipes/all.html
+++ b/public/app/views/pages/recipes/all.html
@@ -1,8 +1,8 @@
+
 <div class="page-header">
 	<h1>
 		All Recipes
 	</h1>
-
 </div>
 
 <div class="jumbotron text-center" ng-show="recipe.processing">
@@ -10,7 +10,7 @@
 	<p>Loading Users...</p>
 </div>
 
-<table class="table table-bordered table-striped" ng-show="recipe.recipes">
+<table class="table table-bordered soft-bg" ng-show="recipe.recipes">
 	<thead>
 		<tr>
 			<th>_id</th>
