--- a/public/app/views/pages/recipes/show.html
+++ b/public/app/views/pages/recipes/show.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <h1>{{ recipe.recipeData.title }}</h1>
-    <div>
 
       <img src="{{ recipe.recipeData.imageUrl }}" alt="" />
 
+    <div class='soft-bg'>
       <h4>Recipe instructions:</h4>
 
       <div><strong>_id:</strong> {{ recipe.recipeData._id }}</div>
