bg style to create user page

--- a/public/app/views/pages/users/single.html
+++ b/public/app/views/pages/users/single.html
@@ -3,6 +3,8 @@
 	<h1 ng-if="user.type == 'edit'">Edit User</h1>
 </div>
 
+<div class='soft-bg'>
+
 <form class="form-horizontal" ng-submit="user.saveUser()">
 
 	<div class="form-group">
@@ -43,4 +45,6 @@
 		</div>
 
 	</div>
+</div>
+
 </div>
