style add ing bg

--- a/public/app/views/pages/users/add_ing.html
+++ b/public/app/views/pages/users/add_ing.html
@@ -3,6 +3,8 @@
 	<h1 ng-if="user.type == 'edit'">Add Ingredient to {{ user.userData.name }}</h1>
 </div>
 
+<div class='soft-bg'>
+
 <form class="form-horizontal" ng-submit="user.addIng()">
 
 	<div class="form-group">
@@ -50,4 +52,6 @@
 		</div>
 
 	</div>
+</div>
+
 </div>
