--- a/public/app/views/pages/users/add_ing.html
+++ b/public/app/views/pages/users/add_ing.html
@@ -1,7 +1,8 @@
 <div class="page-header">
 	<!-- <h1 ng-if="user.type == 'create'">Create User</h1> -->
-	<h1 ng-if="user.type == 'edit'">Add Ingredient to {{ user.userData.name }}</h1>
+	<h1 ng-if="user.type == 'edit'">Add Ingredient</h1>
 </div>
+<a ng-href="/users/{{ user.userData._id }}" class="btn btn-info">Back To Profile</a>
 
 <div class='soft-bg'>
 
