--- a/public/app/views/pages/users/all.html
+++ b/public/app/views/pages/users/all.html
@@ -25,8 +25,8 @@
 			<td>{{ person.name }}</td>
 			<td>{{ person.email }}</td>
 			<td class="col-sm-2">
-				<a ng-href="/users/{{ person._id }}" class="btn btn-danger">Show</a>
-				<a href="#" ng-click="user.deleteUser(person._id)" class="btn btn-primary">Delete</a>
+				<a ng-href="/users/{{ person._id }}" class="btn btn-primary">Show</a>
+				<a href="#" ng-click="user.deleteUser(person._id)" class="btn btn-danger">Delete</a>
 			</td>
 		</tr>
 	</tbody>
