--- a/public/app/views/pages/users/single.html
+++ b/public/app/views/pages/users/single.html
@@ -1,10 +1,10 @@
 <div class="page-header">
 	<h1 ng-if="user.type == 'create'">Create User</h1>
-	<h1 ng-if="user.type == 'edit'">Edit User</h1>
+	<h1 ng-if="user.type == 'edit'">Edit Profile</h1>
 </div>
+<a ng-href="/users/{{ user.userData._id }}" class="btn btn-info">Back To Profile</a>
 
 <div class='soft-bg'>
-
 <form class="form-horizontal" ng-submit="user.saveUser()">
 
 	<div class="form-group">
@@ -31,7 +31,7 @@
 	<div class="form-group">
 	<div class="col-sm-offset-2 col-sm-6">
 		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="user.type == 'create'">Create User</button>
-		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="user.type == 'edit'">Update User</button>
+		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="user.type == 'edit'">Update</button>
 	</div>
 	</div>
 
