--- a/public/app/views/pages/users/show.html
+++ b/public/app/views/pages/users/show.html
@@ -13,7 +13,7 @@
     <div>
 
 
-
+      <div class="">{{ user.userData }}</div>
 
       <div class="recipesGoHere">//// matching recipes populate here ////</div>
 
