--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -43,7 +43,7 @@
 			<a href="/" class="navbar-brand"><span class="glyphicon text-danger"></span> Kitchen Counter</a>
 		</div>
 		<ul class="nav navbar-nav">
-			<li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
+			<!-- <li><a href="/users"><span class="glyphicon glyphicon-user"></span> Users</a></li> -->
 			<li><a href="/recipes"><span class="glyphicon glyphicon-heart"></span> Recipes</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
